# RUST_COP290

./: .gitignore  Cargo.toml  README.md  makefile  report.tex
.github/workflows/: rust.yml
app/: Cargo.toml
app/src/: main.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cores/: Cargo.toml
cores/src/: formulas.rs  lib.rs  main.rs  make_graphs.rs  parse.rs  read_csv.rs  read_csv_file.rs  read_ss.rs  sheet.rs  t.rs  write_csv.rs  write_csv_file.rs  write_ss.rs
cores/temp/: temp.csv
cores/tests/: sheet_tests.rs
gui/: Cargo.toml  Dioxus.toml
gui/assets/: main.css
gui/src/: lib.rs  main.rs
gui/src/components/: cell.rs  context_menu.rs  error_display.rs  formula_bar.rs  graph_forms.rs  graph_popup.rs  grid.rs  header.rs  mod.rs  row.rs  spreadsheet.rs  toolbar.rs
src/core/: formulas.rs  sheet.rs
temp/: temp.csv  test_output.csv
try/: Cargo.toml
try/src/: main.rs  store.rs  store2.rs
