[package]
name = "gui"
version = "0.1.0"
authors = ["Sourav Kumar Patel <116533955+Sourav-pi@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }
cores ={ path = "../cores" } 

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[lib]
name = "gui"
path = "src/lib.rs"